@@ -20,6 +20,7 @@
 #import "IButton.h"
 #import "ISwitch.h"
 #import "ISelect.h"
+#import "ITextArea.h"
 #import "IImage.h"
 #import "INSXmlViewLoader.h"
 #import "IDTHTMLViewLoader.h"
@@ -139,6 +140,7 @@ static NSMutableDictionary *_tagClassTable = nil;
 	[IViewLoader registerViewClass:[ISwitch class] forTag:@"switch"];
 	[IViewLoader registerViewClass:[IButton class] forTag:@"button"];
 	[IViewLoader registerViewClass:[ISelect class] forTag:@"select"];
+	[IViewLoader registerViewClass:[ITextArea class] forTag:@"textarea"];
 }
 
 - (IStyleSheet *)styleSheet{
@@ -260,17 +262,26 @@ static NSMutableDictionary *_tagClassTable = nil;
 	NSString *placeholder = [attributeDict objectForKey:@"placeholder"];
 	NSString *type = [attributeDict objectForKey:@"type"];
 	NSString *value = [attributeDict objectForKey:@"value"];
-	IInput *input = [[IInput alloc] init];
+	IInput *ret = [[IInput alloc] init];
 	if(placeholder){
-		input.placeholder = placeholder;
+		ret.placeholder = placeholder;
 	}
 	if(type && [type isEqualToString:@"password"]){
-		input.isPasswordInput = YES;
+		ret.isPasswordInput = YES;
 	}
 	if(value){
-		input.value = value;
+		ret.value = value;
 	}
-	return input;
+	return ret;
+}
+
+- (ITextArea *)buildTextAreaWithAttributes:(NSDictionary *)attributeDict{
+	NSString *value = [attributeDict objectForKey:@"value"];
+	ITextArea *ret = [[ITextArea alloc] init];
+	if(value){
+		ret.value = value;
+	}
+	return ret;
 }
 
 - (void)checkPlainTextNode{
@@ -350,6 +361,8 @@ static NSMutableDictionary *_tagClassTable = nil;
 		view = [self buildImageWithAttributes:attributeDict];
 	}else if([tagName isEqualToString:@"input"]){
 		view = [self buildInputWithAttributes:attributeDict];
+	}else if([tagName isEqualToString:@"textarea"]){
+		view = [self buildTextAreaWithAttributes:attributeDict];
 	}else{
 		Class clz = [IViewLoader getViewClassForTag:tagName];
 		// 避免嵌套的 ILabel
@@ -435,6 +448,8 @@ static NSMutableDictionary *_tagClassTable = nil;
 		[(ILabel *)view setText:[self getAndResetText]];
 	}else if(viewClass == [IButton class]){
 		[(IButton *)view setText:[self getAndResetText]];
+	}else if(viewClass == [ITextArea class]){
+		[(ITextArea *)view setText:[self getAndResetText]];
 	}else{
 		[self checkPlainTextNode];
 	}
